Sprint two changes. Add bar list. Add bar-card main UI. Add admin login.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,5 +21,9 @@
         <activity android:name=".activity.RegisterActivity"
             android:parentActivityName=".activity.LoginActivity">
         </activity>
+        <activity android:name=".activity.CardActivity">
+    </activity>
+        <activity android:name=".activity.AddCardActivity"
+            android:parentActivityName=".activity.CardActivity"/>
     </application>
 </manifest>
