--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,5 +25,18 @@
     </activity>
         <activity android:name=".activity.AddCardActivity"
             android:parentActivityName=".activity.CardActivity"/>
+
+        <activity android:name=".activity.AdminPunchActivity">
+        </activity>
+        <activity android:name=".activity.UserSearchResults"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
+        </activity>
+        <meta-data android:name="android.app.default_searchable"
+            android:value=".activity.UserSearchResults" />
     </application>
 </manifest>
